adjustment to layout and copy

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <!-- Theme CSS -->
     <link href="css/creative.css" rel="stylesheet">
 
+    <!-- Favicon -->
+    <link rel='shortcut icon' type='image/x-icon' href='img/JF.LogoBlk.png' />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -71,10 +73,11 @@
     <header id="indexHeader" class="parallax">
         <div class="header-content parallax-inner">
             <div class="header-content-inner">
-                <!-- <h1 id="homeHeading">Jillian Flook</h1> -->
-                <h2>Front End Developer</h2>
-                <hr>
-                <p>Full-stack web developer in Austin, Texas, focusing on front-end applications and well curated user experiences.</p>
+                <img id="profilePic" class="img-circle" src="img/jillian.png" alt="Jillian profile picture">
+                <!-- <hr class="primary"> -->
+                <h2>Jillian Flook</h2>
+                <!-- <hr> -->
+                <p>Software developer in Austin, Texas, focusing on front end applications and well curated user experiences.</p>
             </div>
         </div>
     </header>
@@ -83,12 +86,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img id="profilePic" class="img-circle" src="img/profile.jpg" alt="Jillian profile picture">
-                    <!-- <h2 class="section-heading">About</h2> -->
-                    <hr class="primary">
-                    <p class="text-faded">I am a Texas native and after exploring the Lone Star State, I happily settled in Austin. I received my BA in Art History and Spanish at Baylor and promptly dove into the nonprofit world. The nonprofit field was the perfect space to practice program management and give back to our community. Shortly after graduating, I developed an interest in web development. As a life-long learner, I began taking classes on nights and weekends. Before I knew it, front end development was my passion and career focus.</p>
+                    <h2>About</h2>
 
-                    <p class="text-faded">My development background consists of independent online study, the ACC Accelerated Programmer Training program, and the University of Texas Full-Stack Development certification. There are many things that I love about this field, one of which being that the learning doesn't stop. My focus is in front-end applications, mobile responsiveness, UX, and JavaScript frameworks. When I am not absorbed in a project or at a local meetup, you can find me at one of Austin's many beautiful parks.</p>
+                    <p class="text-faded">My development background consists of independent online study, the ACC Accelerated Programmer Training program, the University of Texas Full-Stack Development certification, and on-the-job trainging. My professional experience ranges from WordPress custom theme development to enterprise software add-on development. My focus is in front-end applications and JavaScript frameworks. When I am not absorbed in a project or at a local meetup, you can find me at one of Austin's many beautiful parks.</p>
                 </div>
             </div>
         </div>
