copy and link updates
- .co --> .works
- update ig account to ctg

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Flook.co</title>
+		<title>Flook.works</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,7 +30,7 @@
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/jillian-flook/" class="fa-linkedin" target="_blank">LinkedIn</a></li>
 								<li><a href="https://github.com/jflook10" class="fab fa-github" target="_blank">GitHub</a></li>
-								<li><a href="https://www.instagram.com/jkenw10/" class="fa-instagram" target="_blank">Instagram</a></li>
+								<li><a href="https://www.instagram.com/centraltexasgardener/" class="fa-instagram" target="_blank">Instagram</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -49,7 +49,6 @@
 				if ('addEventListener' in window) {
 					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-preload\b/, ''); });
 					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
-					console.log("Caught ya lookin ;) ");
 				}
 			</script>
 
